fixed expand collapse quirks

--- a/src/sitescripts/components/actions/Action.scss
+++ b/src/sitescripts/components/actions/Action.scss
@@ -11,7 +11,7 @@
     border-radius: 3px;
     display: flex;
     align-items: center;
-    padding-right: 20px;
+    padding: 0 20px 0 10px;
     &:hover {
         animation-duration: 200ms;
         animation-timing-function: linear;
@@ -67,7 +67,7 @@
         color: $gunMetal;
         line-height: 15px;
         font-weight: 500;
-        margin: 6px 0;
+        padding: 17px 0;
         &:hover {
             color: $spaceCadetL1;
         }
