--- a/src/sitescripts/components/actions/ActionPropertyControl.scss
+++ b/src/sitescripts/components/actions/ActionPropertyControl.scss
@@ -1,9 +1,6 @@
 @import "../variables.scss";
 
 .property-control {
-    &:first-child {
-        margin-top: 20px;
-    }
     padding: 10px 0 20px;
     border-top: 1px solid #ddd;
 
