--- a/src/sitescripts/components/code/AdvancedEditor.scss
+++ b/src/sitescripts/components/code/AdvancedEditor.scss
@@ -9,6 +9,7 @@
         background: $white;
         border: none;
         border-radius: 3px;
+        font-size: .9em;
         pre {
             color: $gunMetal;
             .cm-string {
